Fixed the item table cell truncation issue. Long names in a primary cell now truncate properly.

--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -39,4 +39,10 @@
   select {
     height: auto;
   }
+
+  .truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
